--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Dawesome</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>This app requires JavaScript.</noscript>
     <div id="root"></div>
 
     <script src="/src/index.tsx" type="module"></script>
